fix: img margin on mobile

--- a/style.css
+++ b/style.css
@@ -552,8 +552,6 @@ footer .contact-info a {
   }
   .partners .partner img {
     height: 40px;
-    margin-right: 2rem;
-    margin-top: 2rem;
   }
   .floke {
     margin: 0;
